# WezaEmbedded

./: .gitignore  ControlGPIO  README.md  _README.md  index.html  parser-network-packets.sh  parser_network_packet.c
CLesson/: a.out  ex_binaryTree_prog.c  ex_factorial_prog.c  ex_prog_malloc.c  ex_recursive_function_prog.c  factorial  main_binarTree_prog  main_ex_prog_malloc
CppLesson/: ApplicationLogger  ExampleOfSetMethoInCppSevenTen.cpp  ForInPairElement  ForInPairElement.cpp  LogSystem  MainTimer  TDF  TDF.cpp  Tdfmain  TestApplicationLogger.cc  _syslogExample.cpp  agdMain  agdQueueManager.cpp  appOpengl  atomicVariable  deleResType  exampleAtomicVariable.cpp  interview_code_training  interview_coding_challenge  lambdaFunctios  lambdaFunctiosn  lambdaFunctiosn.cpp  logData  main  mainAtomic  mainSTR  mainSyslog  mainThread  maindefine  maindefinefunc  newforLoop  newforLoop.cpp  receiveCommdaLine  setMetho  topQuestion-01  topQuestion-01.cpp  topQuestion-02  topQuestion-02.cpp  topQuestion-03  topQuestion-03.cpp  (+7 more)
CppLesson/SFML-projects/: main  sfml-exercise-01.cpp  sfml-exercise-02.cpp
CppLesson/code-challenges/algorithms/: binarySearch.cpp  callCenter.cpp  dispatchCall  exprienced-question.cpp  expriencedTest  function-pointer.cpp  function-ptr  linkedList.cpp  main  old_linkedList.cpp  searchSubstring.cpp
CppLesson/code-challenges/blackjack/: CMakeLists.txt  main.cpp
CppLesson/code-challenges/calculateTheModa/: manTest
CppLesson/code-challenges/car-toy-wrokshop/: main.cpp
CppLesson/code-challenges/consecutive-number/: CMakeLists.txt  main.cpp  test
CppLesson/code-challenges/design-parttern.singlethon/: main.cpp
CppLesson/code-challenges/design-pattern-visitor/: main.cpp
CppLesson/code-challenges/double-character-swap/: main.cpp
CppLesson/code-challenges/even-odd/: main.cpp
CppLesson/code-challenges/find-the-discount/: main.cpp
CppLesson/code-challenges/letter-distance/: main.cpp
CppLesson/code-challenges/matrix-transpose/: CMakeLists.txt  main.cpp
CppLesson/code-challenges/mini-sudoku/: main.cpp
CppLesson/code-challenges/number-card/: main.cpp
CppLesson/code-challenges/perfect-square-patch/: main.cpp
CppLesson/code-challenges/prime-numbers/: main.cpp
CppLesson/code-challenges/regex/: main.cpp
CppLesson/code-challenges/reverse-coding-challenge/: main.cpp
CppLesson/code-challenges/reverse-string/: main.cpp
CppLesson/code-challenges/spin-around/: main.cpp
CppLesson/code-challenges/string-matrix-search/: main.cpp
CppLesson/code-challenges/sum-even-odd/: main.cpp
CppLesson/code-challenges/tweaking-letters/: main.cpp
CppLesson/code-challenges/x-sqroot/: main.cpp
CppLesson/cpp-files/: CoreMiddleWare.cpp  Exampletuple.cpp  Mutable.cpp  Syslog.cpp  TestingQueue.cpp  ThreadExample.cpp  interview_code_training.cpp  interview_coding_challenge.cpp  lessonSetMethod.cpp
CppLesson/design-parttern/Observer/: CMakeLists.txt  example  example.cpp
CppLesson/design-parttern/Observer/includes/: DbContext.h
CppLesson/design-parttern/Observer/src/: DbContext.cpp  ObserverPattern.cpp
CppLesson/design-pattern/Observer/src/: CMakeLists.txt  Observer.cpp  main.cpp
CppLesson/design-pattern/factory/: CMakeLists.txt  main.cpp
CppLesson/design-pattern/factory/src/: Beef.cpp  Beef.hpp  CMakeLists.txt  Chicken.cpp  Chicken.hpp  IBurger.hpp  Kitchen.cpp  Kitchen.hpp  Menu.cpp  Menu.hpp  Restaurant.cpp  Restaurant.hpp  Veggie.cpp  Veggie.hpp  Waitress.cpp  Waitress.hpp
CppLesson/gTest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_01.cpp
CppLesson/gTest/agdProcess/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
CppLesson/gTest/agdProcess/src/: Foo.cpp  agdmedica_process.cpp
CppLesson/gTest/projectExample02/: CMakeLists.txt
CppLesson/gTest/projectExample02/mylibraries/: BankService.cpp  BankService.hpp  CMakeLists.txt  Foo.cpp  Foo.h
CppLesson/gTest/projectExample02/src/: main.cpp
CppLesson/gTest/projectExample02/test/: .main.cpp.swp  CMakeLists.txt  MockBankService.hpp  main.cpp
CppLesson/jobChallenge/: Thread  Thread.cpp  byteGnerator  byteGnerator.cpp  jobChallenge.cpp  main
CppLesson/nextThink_codeChallenge_2024/: Certificate.pem  SocketManager.hpp  SocketTcpIp.hpp  TcpIpOverSsl.hpp  client  cserver  main.cpp  server  startClient.cpp
CppLesson/praticesReferences/: Servers.cpp
CppLesson/study-cpp-11-14-17-20/: main.cpp  testfile.txt
JavaCode/: MyApp.java  syslogFromJava.java
JavaScript/: qml-java.js
MongoDb/: HelperNotes.txt
NodejsLesson/: Server.js  restServer.js
PythonLesson/: ApplyFilterToUserImm.py  FileXmlSec.xml  FileXmlToTest.xml  pythonArray.py  sapcXmlUserAccount.xml
Restful-API-nundelTechmPainel/: .env  package.json  package.json_backup
Restful-API-nundelTechmPainel/src/: NodeCmd_Utilities.txt  app.js  index.js  server.js
Scripts/: DNS.sh  ExampleSwitchCase.sh  ExampleSwitchCase.sh.save  Filter.txt  LOGTestingFunction.sh  SAPCAPP.sh  SAPCAPP.sh.save  SController.txt  SController.txt.save  logFile.txt  logUserLogin.sh  logmngr.cfg  messageFilter.sh  newFile  resolv.conf.back  testFile.txt  tino.txt  tino.txte
Taxi-management-system/: .tsconfig.json.swp  README.md  angular.json  package-lock.json  package.json
Taxi-management-system/src/: index.html
WebDevLesson/: DNS.sh  misestilos.css  mpDisplay.html
mpainel/: index.html  misestilos.css  mpainel.js  refreshPainelUserInfo.js
nodejs-restfull-api/RestAPI/: package-lock.json  package.json
store-display/: index.html  style.css
store-display/app-controller/: README.md  angular.json  package-lock.json  package.json  tsconfig.json
(+71 files in other folders)
